--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<title>Move you feet</title>
+<html>
+    <title>Icecream</title>
+    <h1>Choose your icecream flavor</h1>
+    <div id="flavor">
+        <form>
+            <input type="radio" name="flavor" value="mango"> mango <br/>
+            <input type="radio" name="flavor" value="vanilla"> vanilla <br/>
+            <input type="radio" name="flavor" value="chocolate"> chocolate <br/>
+            <input type="radio" name="flavor" value="passion"> passion fruit <br>
+            <input type="button" value="submit"> <br/>
+            <br />
+        </form>
+    </div>
+</html>
